[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-secret-scanner"
version = "0.1.0"
description = "Code secret scanner — find hardcoded credentials, tokens, and keys"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
vault = "vault.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vault*"]
